--- a/EmergencyHoundWeb/EmergencyHoundWeb.csproj
+++ b/EmergencyHoundWeb/EmergencyHoundWeb.csproj
@@ -193,7 +193,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Docs\MobileDeploymentNotes.txt" />
     <Content Include="Content\animate.css" />
     <Content Include="Content\app.css" />
     <Content Include="Content\app_custom.css" />
@@ -225,6 +224,21 @@
     <Content Include="Content\Images\phone-1.png" />
     <Content Include="Content\Images\phone-2.png" />
     <Content Include="Content\Images\render-1.png" />
+    <Content Include="Content\Images\screen1.png" />
+    <Content Include="Content\Images\screen10.png" />
+    <Content Include="Content\Images\screen11.png" />
+    <Content Include="Content\Images\screen12.png" />
+    <Content Include="Content\Images\screen13.png" />
+    <Content Include="Content\Images\screen14.png" />
+    <Content Include="Content\Images\screen15.png" />
+    <Content Include="Content\Images\screen2.png" />
+    <Content Include="Content\Images\screen3.png" />
+    <Content Include="Content\Images\screen4.png" />
+    <Content Include="Content\Images\screen5.png" />
+    <Content Include="Content\Images\screen6.png" />
+    <Content Include="Content\Images\screen7.png" />
+    <Content Include="Content\Images\screen8.png" />
+    <Content Include="Content\Images\screen9.png" />
     <Content Include="Content\Images\seal_epa.png" />
     <Content Include="Content\Images\seal_itemc.png" />
     <Content Include="Content\Images\seal_kickapoo.png" />
