--- a/EmergencyHoundWeb/Web.config
+++ b/EmergencyHoundWeb/Web.config
@@ -17,23 +17,27 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Set to true to integrate Emergency Hound with external OpenID provider (IdentityServer)-->
+    <add key="UseIdentityServer" value="true" />
+    <add key="IdentityServerAuthority" value="http://localhost:3892/"/>
+    <add key="IdentityServerRedirectURI" value="http://localhost:1244/signinoidc"/>
+    <add key="IdentityServerPostLogoutURI" value="http://localhost:1244/signoutcallbackoidc"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <authentication mode="Forms">
+    <!-- (comment out if using remote IdentityServer) -->
+    <!--<authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
-    </authentication>
-    <!-- Added by Doug -->
-    <!-- Sets class used for custom user authentication -->
-    <membership userIsOnlineTimeWindow="40" defaultProvider="CPSMembershipProvider">
+    </authentication>-->
+     <!-- Sets class used for custom user authentication (comment out if using remote IdentityServer) -->
+     <!--<membership userIsOnlineTimeWindow="40" defaultProvider="CPSMembershipProvider">
       <providers>
         <clear />
         <add name="CPSMembershipProvider" type="EmergencyHoundWeb.App_Logic.CPSMembershipProvider" />
       </providers>
-    </membership>
-    <!-- Added by Doug -->
-    <!-- Enables Role-Based Authorization -->
+    </membership>-->
+     <!--Enables Role-Based Authorization--> 
     <authorization>
       <allow roles="ADMIN" />
       <!--<deny users="?"/>-->
@@ -43,13 +47,13 @@
         <clear />
         <add name="CPSRoleProvider" connectionStringName="vccb" applicationName="CPS" type="EmergencyHoundWeb.App_Logic.CPSRoleProvider" />
       </providers>
-    </roleManager>    
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -73,6 +77,34 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Logging" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.4.0" newVersion="1.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Tokens" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.4.0" newVersion="5.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20622.1351" newVersion="4.0.20622.1351" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <!--<dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>-->
+      <dependentAssembly>
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
