--- a/EmergencyHoundWeb/Web.config
+++ b/EmergencyHoundWeb/Web.config
@@ -18,8 +18,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!-- Set to true to integrate Emergency Hound with external OpenID provider (IdentityServer)-->
-    <add key="UseIdentityServer" value="true" />
-    <add key="IdentityServerAuthority" value="http://localhost:3892/"/>
+    <add key="UseIdentityServer" value="false" />
+    <add key="IdentityServerAuthority" value="https://localhost:44362/"/>
     <add key="IdentityServerRedirectURI" value="http://localhost:1244/signinoidc"/>
     <add key="IdentityServerPostLogoutURI" value="http://localhost:1244/signoutcallbackoidc"/>
   </appSettings>
@@ -27,16 +27,16 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <!-- (comment out if using remote IdentityServer) -->
-    <!--<authentication mode="Forms">
+    <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
-    </authentication>-->
+    </authentication>
      <!-- Sets class used for custom user authentication (comment out if using remote IdentityServer) -->
-     <!--<membership userIsOnlineTimeWindow="40" defaultProvider="CPSMembershipProvider">
+     <membership userIsOnlineTimeWindow="40" defaultProvider="CPSMembershipProvider">
       <providers>
         <clear />
         <add name="CPSMembershipProvider" type="EmergencyHoundWeb.App_Logic.CPSMembershipProvider" />
       </providers>
-    </membership>-->
+    </membership>
      <!--Enables Role-Based Authorization--> 
     <authorization>
       <allow roles="ADMIN" />
